# otai-financial

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  optimize_example.py  pyproject.toml  roadmap_example.py  streamlit_app.py
.tmp/: new_update_marketing_sales_strategy_products.md  test_credit_reserve.py  test_decision_plot.py  test_liquidity_constraint.py
.windsurf/: hooks.json  run_tests.py
data/: OTAI_Simple_Budget.xlsx  OTAI_Simulation_Report.xlsx  input_market_ticket_system_sizes.csv
data/optimizations/: optimization_0f4ebf35128426aee21c190291c95c9392813bb384d657debbaf26c933882fa7.yaml  optimization_20260205_074045.yaml  optimization_20260205_083258.yaml  optimization_20260205_084058.yaml  optimization_20260205_084813.yaml  optimization_20260205_091003.yaml  optimization_20260205_092757.yaml  optimization_20260205_093640.yaml  optimization_20260205_094633.yaml  optimization_20260205_095139.yaml  optimization_20260205_100155.yaml  optimization_20260205_101326.yaml  optimization_20260205_102659.yaml  optimization_20260205_102811.yaml  optimization_20260205_102945.yaml  optimization_20260205_103736.yaml  optimization_20260205_104322.yaml  optimization_20260205_104422.yaml  optimization_20260205_104742.yaml  optimization_20260205_104908.yaml  optimization_20260205_105423.yaml  optimization_20260205_105519.yaml  optimization_20260205_105713.yaml  optimization_20260205_105917.yaml  optimization_20260205_110110.yaml  optimization_20260205_110603.yaml  optimization_20260205_111713.yaml  optimization_20260205_112038.yaml  optimization_20260205_112328.yaml  optimization_20260205_113450.yaml  optimization_20260205_113934.yaml  optimization_20260205_115131.yaml  optimization_20260205_115538.yaml  optimization_20260205_115654.yaml  optimization_20260205_115813.yaml  optimization_20260205_120825.yaml  optimization_20260205_142923.yaml  optimization_20260205_143240.yaml  optimization_20260205_143913.yaml  optimization_20260205_144312.yaml  (+18 more)
docs/: Finanzplan_Start-up_BW_Pre-Seed - Einzahlungen_Auszahlungen.csv  Finanzplan_Start-up_BW_Pre-Seed - Erträge_Aufwendungen.csv  Finanzplan_Start-up_BW_Pre-Seed - Finanzplan.csv  Finanzplan_Start-up_BW_Pre-Seed.xlsx  channels_analysis.md  default_assumptions.md  documentation.md
otai_forecast/: compute.py  config.py  decision_optimizer.py  docs_streamlit.py  effects.py  export.py  models.py  optimization_storage.py  optimize.py  plots.py  roadmap.py  run.py  simulator.py
scripts/: generate_assumptions_markdown.py
tests/: test_assumptions_validation.py  test_assumptions_validation_strict.py  test_compute.py  test_credit_reserve.py  test_docs_streamlit.py  test_effects.py  test_optimization_storage.py  test_plots.py  test_scenario_assumptions.py  test_simulator.py
