[project]
name = "otai-financials"
version = "0.1.0"
description = "OTAI Financial Forecasting System"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "streamlit-javascript>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["otai_forecast"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
