[project]
name = "otai-financials"
version = "0.1.0"
description = "OTAI Financial Forecasting System"
requires-python = ">=3.13"
dependencies = [
    "kaleido>=0.2.1",
    "openpyxl>=3.1.5",
    "optuna>=4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pandas-stubs>=2.3.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.53.1",
    "streamlit-javascript>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "data",
]

[tool.ruff.lint]
# Select rules following 2025 best practices
select = [
    "F",      # Pyflakes rules
    "E",      # PyCodeStyle errors
    "W",      # PyCodeStyle warnings
    "I",      # Sort imports properly
    "UP",     # Warn if certain things can changed due to newer Python versions
    "C4",     # Catch incorrect use of comprehensions, dict, list, etc
    "FA",     # Enforce from __future__ import annotations
    "ISC",    # Good use of string concatenation
    "ICN",    # Use common import conventions
    "RET",    # Good return practices
    "SIM",    # Common simplification rules
    "TID",    # Some good import practices
    "TC",     # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",    # Use pathlib instead of os.path
    "TD",     # Be diligent with TODO comments
    "PERF",   # Performance optimizations
    "RUF",    # Ruff-specific rules
    "PL",     # Pylint rules (selective)
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR0912", # Too many branches
    "TD003",   # Missing issue link on TODO
    "PLR2004", # Magic value in comparison
    "RUF001",  # Ambiguous characters (like ×)
    "PTH123",  # Use Path.open() instead of open()
]
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["otai_forecast"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
max-args = 10
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
